@@ -1,3 +1,7 @@
 # Solar-system-Java
 PL: Projekt przedstawia program napisany w języku Java przedstawiający wizualizację Układu Słonecznego
 Eng: The project presents a program written in Java language. It shows the visualization of the Solar System.
+
+
+
+--module-path "C:\javafx-sdk-17.0.2";"C:\javafx-sdk-17.0.2\lib" --add-modules javafx.controls,javafx.fxml
